# igarchive

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.py  pyproject.toml  run.py
docs/: project-overview.md
memory/: decisions.md  known-errors.md
scripts/: backfill_covers.py  backfill_music.py
skills/: guidelines.md
src/igarchive/: __init__.py  fetcher.py  launcher.py  media.py  music.py  normalizer.py  progress.py  schema.py  session.py
src/igarchive/ui/: control.html
src/igarchive/viewer/: app.js  index.html  style.css
tests/: test_contract.py  test_fetcher.py  test_media.py  test_music.py  test_progress.py  test_session.py
tests/fixtures/: profile.golden.json
