[project]
name = "igarchive"
version = "0.1.0"
description = "Local Instagram profile archiver with an offline viewer"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # NOTE: plain PyPI instaloader currently 403s on Instagram's graphql API. This
    # project runs a patched build — after `pip install -e`, reinstall it from the PR:
    # see README "Future-proofing" (the refs/pull/.../head command). KE-025.
    "instaloader>=4.13",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pyinstaller>=6.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
igarchive = ["viewer/*", "ui/*"]

[tool.pytest.ini_options]
markers = ["contract: schema/contract tests — must pass before any commit"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
strict = true
files = ["src"]
